# Changelog

## Alpha XXX (Unreleased)

* UI: "Erfolg" Screen nach jedem Level
* Global: Im angezeigten Punktestand werden die Punkte aus den anderen Maps jetzt mit einberechnet
* map04: Color Tint zu Feuer hinzugefügt
* map05: Mehr Soundeffekte zum Endboss hinzugefügt
* map01: Kuh-Sound hinzugefügt

# Alpha 021 (Unreleased)
* Neuer Charakter-Sprite für Grunzi mit Animation

# Alpha 020 (26.10.2024)

* map05: Fehler behoben, bei dem der Laser-Sound des Endboss nicht gestoppt wurde.
* map05: Endboss verursacht nun Schaden bei Berührung
* map03: Ablegen des Ventils korrigiert
* map03: Nebel Effekt Performance optimiert
* "Map abgeschlossen" View hinzugefügt
* Slider für die Gesamt-Lautstärke hinzugefügt
* Geschwindigkeit der Gesundheitsregeneration nun abhängig vom Schwierigkeitsgrad
* "Borderless" Grafikoption entfernt
* Abweichender Ladebildschirm an Halloween

# Alpha 019 (20.09.2024)

# map05: Endboss hinzugefügt
* map01: Autofahr-Animation am Ende des Levels eingefügt
* Highscore-Liste: Wenn die Auflösung kleiner als 1366x768 ist, wurde die Highscore-Liste nicht angezeigt
* Global: Erscheinungsbild der Geschosse geändert
* Global: Bild auf / Bild ab schaltet Items durch
* Global: Performance-Optimierungen
* Global: Größe von Grunzis Geschossen wird im Spielstand gespeichert

## Alpha 018 (02.09.2024)

* map04: Gegner aktiviert
* map04: Neuer Gegner hinzugefügt: Explodierendes Fass
* map04: Puzzle mit Schalter und Portal hinzugefügt
* Global: Performance Optimierungen

## Alpha 017 (23.08.2024)

* map04 hinzugefügt
* Video: Video Cutscenes können in den Grafikeinstellungen deaktiviert werden.
* Global: Animationen sind jetzt flüssiger, wenn V-Sync aktiviert ist
* Global: Performance Optimierungen
* Menü: Mauszeiger Steuerung über Controller verbessert

## Alpha 016 (03.08.2024)

* Neues Essen: Donuts
* Neues Essen: Pizza
* Menü: Weitere Grafikeinstellungen hinzugefügt
* Menü: "Map auswählen" Menü überarbeitet