@@ -8,8 +8,15 @@
 * map05: Mehr Soundeffekte zum Endboss hinzugefügt
 * map01: Kuh-Sound hinzugefügt
 
+
+# Alpha 022 (Unreleased)
+
+* Neue NPC-Sprites für Hühner mit Animationen
+
 # Alpha 021 (Unreleased)
-* Neuer Charakter-Sprite für Grunzi mit Animation
+
+* Neue Charakter-Sprites für Grunzi mit Animationen
+* Qualität der  Sprite-Skalierungen verbessert
 
 # Alpha 020 (26.10.2024)
 
